feat: 增加可开关的系统更新通知，发布 v2.0.0.10
